tests: немного добавил